# LokiTemPad

./: .gitignore  CMakeLists.txt  INSTALL.md  constants.qml  main.cpp  main.py  main.qml  qml.qrc
imports/TemPad/: Base.qml  Constants.qml  Frame.qml  Icons.qml  PadText.qml  constants.qml  perlin.js  qmldir
